# MaxAgent

./: .code-graph.json  .gitignore  app.py  config.py  framework.md  gen_cat.py  main.py  pyproject.toml
app/: models_store.py
app/api/: chat.py  conversations.py  conversations_route.py  debug.py  fun.py  models.py  models_route.py  sessions.py  skills.py
app/config/: model.py  prompts.py  settings.py
app/context/: context.json  context.py  skill_loader.py  tool_loader.py
app/schemas/: requests.py
app/services/: agent.py  chat_service.py
app/skills/: __init__.py
app/skills/bash/: executor.py  skill.md
app/skills/gpt-image-2/: SKILL.md
app/static/: index.html
app/static/css/: styles.css
app/static/js/: app.js  i18n.js
app/storage/: .gitkeep  models.py  session_store.py
app/tools/: file.py  system.py
home/config/: models.json
tests/: icon_detect.py  ocr_detect.py
