[project]
name = "maxagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
    "langchain-core",
    "langchain-openai",
    "langgraph",
    "onnxruntime>=1.27.0",
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "numpy>=2.5.1",
    "fastapi>=0.139.1",
    "uvicorn[standard]>=0.51.0",
    "pywebview>=6.2.1",
]
